--- a/6_HomeTask.ioc
+++ b/6_HomeTask.ioc
@@ -21,8 +21,8 @@ Mcu.PinsNb=7
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
-MxCube.Version=6.3.0
-MxDb.Version=DB.6.0.30
+MxCube.Version=6.4.0
+MxDb.Version=DB.6.0.40
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -42,7 +42,8 @@ PB4.Signal=SPI1_MISO
 PB5.Locked=true
 PB5.Mode=Full_Duplex_Master
 PB5.Signal=SPI1_MOSI
-PD7.GPIOParameters=GPIO_Speed
+PD7.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PD7.GPIO_PuPd=GPIO_NOPULL
 PD7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD7.Locked=true
 PD7.Signal=GPIO_Output
